--- a/public/apidoc/api_project.json
+++ b/public/apidoc/api_project.json
@@ -23,11 +23,12 @@
     "withGenerator": false,
     "jQueryAjaxSetup": {}
   },
-  "apidoc": "0.2.0",
+  "defaultVersion": "0.0.0",
+  "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2017-07-22T08:45:46.807Z",
+    "time": "2017-07-24T03:27:56.434Z",
     "url": "http://apidocjs.com",
-    "version": "0.16.1"
+    "version": "0.17.6"
   }
 }
